--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -105,6 +105,7 @@
     {% if site.comments.disqus %}
     <section class="post-footer-item comment">
         <div id="disqus_thread"></div>
+            <div id="gitalk_container"></div>
     </section>
     {% endif %}
   </section>
